# phys7730

./: .buildinfo  .gitignore  README.md  _config.yml  _toc.yml  build.sh  environment.yml  genindex.html  index.html  index.md  intro.html  intro.md  objects.inv  policies.html  policies.md  pyproject.toml  references.bib  references.html  requirements.txt  schedule.html  schedule.md  search.html  searchindex.js  setup.html  setup.md  syllabus.html  syllabus.md
.github/workflows/: deploy-book.yml
_sources/: index.md  intro.md  policies.md  schedule.md  setup.md
_sources/labs/: 01.ipynb  02.ipynb  ml.md  (+9 more)
_sources/labs-extra/: 03.md  06.md
_static/: documentation_options.js  mystyle.css
assets/: environment.yml
data/: lab12b.csv
labs/: 00.html  01.html  02.html  02.ipynb  03.html  03.ipynb  04.html  04.ipynb  05.html  06.html  06.ipynb  07.html  08.html  09.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  16.ipynb  17.html  17.ipynb  18.html  inference.html  ml.html
labs-extra/: 01.html  01.md  02.html  02.md  03.html  04.html  05.html  06.html  09.html  09.md
readings/: 01.html  01.md  02.html  02.md  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  10.md  11.html  11.md  12.html  12.md  13.html  13.md  14.html  15.html  16.html  17.html  17.md  18.html  18.md  inference.html  inference.md  ml.html
spring2024/: .buildinfo  _config.yml  _toc.yml  environment.yml  genindex.html  index.html  objects.inv  policies.html  policies.md  references.html  schedule.html  schedule.md  search.html  searchindex.js  setup.html
(+103 files in other folders)
